Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68809

Code generated by qmlcachegen has extra ";"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.11.2
    • 5.11.0
    • QML: Compiler
    • None
    • 27a6b122343322a02e0fe26fb76c05f6105c4b94

    Description

      The code generated by qmlcachegen produces warnings when compiling with gcc with -Werror=pedantic. 

       Example:

       

      [...]qmlcache_loader.cpp:1127:40: error: extra ‘;’ [-Werror=pedantic]
      Q_GLOBAL_STATIC(Registry, unitRegistry);
      
      [...]
      [...]/qmlcache_loader.cpp:1295:67: error: extra ‘;’ [-Werror=pedantic] Q_CONSTRUCTOR_FUNCTION(QT_MANGLE_NAMESPACE(qInitResources_loomui));
      
      

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            alexej alexej
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes