qmlcachegen: Remove superfluous semicolons from generated code

This fixes the "extra ';'" warnings when compiling generated code with
-Werror=pedantic.

Task-number: QTBUG-68809
Change-Id: Ie26cdc4e06bc26587766dd72b258624773a7f990
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>